fix: missing scrollbar custom style on Chrome 121 (#1103)
* fix: missing scrollbar custom style on Chrome 121

* chore(release): publish [skip ci]

 - @refinitiv-ui/demo-block@7.1.7-next.0
 - @refinitiv-ui/elemental-theme@7.3.5-next.0
 - @refinitiv-ui/elements@7.10.5-next.0
 - @refinitiv-ui/halo-theme@7.3.5-next.0
 - @refinitiv-ui/solar-theme@7.2.6-next.0

* Revert "fix: missing scrollbar custom style on Chrome 121"

This reverts commit cfa95a640e9a433cfd69e817b308056cc0c5a9d4.

* fix: add @support selector

* refactor(): move @support to top level

* chore(release): publish [skip ci]

 - @refinitiv-ui/demo-block@7.1.7-next.1
 - @refinitiv-ui/elemental-theme@7.3.5-next.1
 - @refinitiv-ui/elements@7.10.5-next.1
 - @refinitiv-ui/halo-theme@7.3.5-next.1
 - @refinitiv-ui/solar-theme@7.2.6-next.1

* fix: incorrect scrollbar color

* style: remove extra whitespace

* chore(release): publish [skip ci]

 - @refinitiv-ui/demo-block@7.1.7-next.2
 - @refinitiv-ui/elemental-theme@7.3.5-next.2
 - @refinitiv-ui/elements@7.10.5-next.2
 - @refinitiv-ui/halo-theme@7.3.5-next.2
 - @refinitiv-ui/solar-theme@7.2.6-next.2

* Revert "chore(release): publish [skip ci]"

This reverts commit 8ce80765d9988a7065e36ec557619e697124c3b3.

* Revert "chore(release): publish [skip ci]"

This reverts commit c175e65fd5abc8296555c9fc92d98da0a0237cfb.

* Revert "chore(release): publish [skip ci]"

This reverts commit ed9f1f709735cad046374176819a2f7e00af426a.

* style: start new line on comment

* refactor: deprecate mozilla-scrollbar and scrollbars mixin

* refactor: update comment and reposition mixin

* refactor: update usage example for scrollbar

---------

--- a/packages/halo-theme/src/native-elements/html.less
+++ b/packages/halo-theme/src/native-elements/html.less
@@ -1,6 +1,8 @@
 @import '@refinitiv-ui/elemental-theme/src/native-elements/html';
 @import '../shared-styles/scrollbar';
 
-html {
-  scrollbar-width: auto;
+@supports not selector(::-webkit-scrollbar) {
+  html {
+    scrollbar-width: auto;
+  }
 }
